# Paper-Serch

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gemini_summary.py  pubmed_bibtex.py  pyproject.toml  requirements.txt  webapp.py
.github/workflows/: docker-build.yml
ai_providers/: __init__.py  base.py  gemini.py  ollama.py  openai_provider.py  registry.py
app/: __init__.py  server.py
app/ai/: base.py  gemini.py  openai_provider.py  registry.py
app/core/: ai_models.py  ai_query.py  ai_summary.py  bibtex.py  db.py  directions.py  env_loader.py  keys.py
app/sources/: base.py  pubmed.py
app/web/: __init__.py  forms.py  search.py
docs/: AI_PROMPTS.md  CHANGELOG.md  DATABASE.md  DEVELOPER.md  LIMITATIONS.md
paper_sources/: __init__.py  base.py  embase.py  pubmed.py  registry.py
services/: ai_models.py  ai_query.py  ai_summary.py  bibtex.py  db.py  directions.py  env_loader.py
static/css/: main.css
static/js/: main.js
templates/: _base.html  account.html  admin_users.html  index.html  login.html  register.html  tutorial.html  workflow.html
templates/_partials/: article_list.html  bibtex_card.html  preset_ai_notice.html  provider_panels.html  site_header.html  status_module.html
web_layer/: forms.py  search.py
