[project]
name = "paper-serch"
version = "0.5.0"
description = "Flask web app for literature search with optional AI summaries"
readme = "README.md"
authors = [{ name = "Paper-Serch Maintainers" }]
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0",
  "requests>=2.31",
  "google-genai>=0.3",
  "openai>=1.0",
]

[tool.uv]
package = false
